CHANGES for LIRE
================

2015-06-16
==========
  - Added custom DocumentBuilder for handling metadata to ParallelIndexer.
  - Fixed LIRE demo.
  - Worked on the developer docs.

2015-06-16
==========
  - updated to Lucene 5.2.1, fixed simpleapplication to go with Lucene 5.2.1

2015-06-10
==========
  - Lire 1.0 beta, extreme changelist, massive API changes, by Nektarios.

2015-02-13
==========
  - Bug fix in LireDemo build file
  
2015-02-13
==========
  - SimpleBuilder: Changed size selection to lookup table. -> 12% faster.
  - SimpleBuilder: Reduced String concats & "new" in loops.

2015-02-10
==========
  - bug fix in BOVWBuilder based on bug report by Haihui Cai

2015-01-18
==========
  - Added custom implementation of a caching searcher
  - fixed a performance issue in GenericFastImageSearcher
  - refactored weka depending classes into a sample directory

2015-01-16
==========
  - Made output of ParallelIndexer more readable.
  - Added a getter to CEDD

2015-01-15
==========
  - Updated documentation

2015-01-02
==========
  - Moved documentation from online wiki to .md files. Using tool from mkdocs.org top generate static online site.

2014-12-18
==========
  - Changed ParallelIndexer to using LinkedBlockingQueue and Files.readAllBytes(...) Note: JDK 7 only!

2014-12-12
==========
  - Re-Factored handling of local features (Nektarios Anagnostopoulos)

2014-11-28
==========
  - Added file read function to FileUtils.

2014-11-28
==========
  - Changed dimension calculation to Math.round (instead of Math.floor) in image scaling in ImageUtils

2014-11-28
==========
  - Bugfix in ScalableColorImpl from fix from Patti Spala for images with more than 3 bands, ie. alpha channel.

2014-11-17
==========
  - Bugfix in cluster writing and reading (Nektarios Anagnostopoulos)
  - Architectural re-arrangement of internal methods in BoVW implementation (Nektarios Anagnostopoulos)

2014-11-07
==========
  - Updated to Lucene 4.10.2