@@ -49,6 +49,7 @@ import net.semanticmetadata.lire.utils.ImageUtils;
 import net.semanticmetadata.lire.utils.SerializationUtils;
 
 import java.awt.image.BufferedImage;
+import java.awt.image.DataBufferInt;
 import java.util.Arrays;
 
 /**
@@ -76,6 +77,7 @@ public class CEDD implements GlobalFeature {
     private double iTmp1, iTmp2;
 
 
+
     public CEDD(double Th0, double Th1, double Th2, double Th3, boolean CompactDescriptor) {
         this.T0 = Th0;
         this.T1 = Th1;
@@ -95,7 +97,7 @@ public class CEDD implements GlobalFeature {
     // signature changed by mlux
     @Override
     public void extract(BufferedImage image) {
-        image= ImageUtils.get8BitRGBImage(image);
+        image = ImageUtils.get8BitRGBImage(image);
         Fuzzy10Bin Fuzzy10 = new Fuzzy10Bin(false);
         Fuzzy24Bin Fuzzy24 = new Fuzzy24Bin(false);
         RGB2HSV HSVConverter = new RGB2HSV();
@@ -116,7 +118,6 @@ public class CEDD implements GlobalFeature {
         int[][] ImageGridBlue = new int[width][height];
 
 
-
 //please double check from here
         int NumberOfBlocks = -1;
 
@@ -128,23 +129,19 @@ public class CEDD implements GlobalFeature {
         int Step_X = 2;
         int Step_Y = 2;
 
-        if (NumberOfBlocks > 0)
-        {
-            Step_X =  (int)Math.floor(width / Math.sqrt(NumberOfBlocks));
-            Step_Y = (int)Math.floor(height / Math.sqrt(NumberOfBlocks));
+        if (NumberOfBlocks > 0) {
+            Step_X = (int) Math.floor(width / Math.sqrt(NumberOfBlocks));
+            Step_Y = (int) Math.floor(height / Math.sqrt(NumberOfBlocks));
 
-            if ((Step_X % 2) != 0)
-            {
+            if ((Step_X % 2) != 0) {
                 Step_X = Step_X - 1;
             }
-            if ((Step_Y % 2) != 0)
-            {
+            if ((Step_Y % 2) != 0) {
                 Step_Y = Step_Y - 1;
             }
 
 
         }
-
 
 
 // to here
@@ -158,17 +155,23 @@ public class CEDD implements GlobalFeature {
         for (int i = 0; i < 144; i++) {
             CEDD[i] = 0;
         }
-        int pixel;
+        int pixel, r, g, b;
+
+        // extraction is based on a speedup fix from Michael Riegler & Konstantin Pogorelov
+        BufferedImage image_rgb = new BufferedImage(width, height, BufferedImage.TYPE_INT_BGR);
+        image_rgb.getGraphics().drawImage(image, 0, 0, null);
+        int[] pixels = ((DataBufferInt) image_rgb.getRaster().getDataBuffer()).getData();
         for (int x = 0; x < width; x++) {
             for (int y = 0; y < height; y++) {
-                pixel = image.getRGB(x, y);
-                ImageGridRed[x][y] = (pixel >> 16) & 0xff;
-                ImageGridGreen[x][y] = (pixel >> 8) & 0xff;
-                ImageGridBlue[x][y] = (pixel) & 0xff;
-                //int mean = (int) (0.114 * ImageGridBlue[x][y] + 0.587 * ImageGridGreen[x][y] + 0.299 * ImageGridRed[x][y]);
-//                ImageGrid[x][y] = (0.114f * ImageGridBlue[x][y] + 0.587f * ImageGridGreen[x][y] + 0.299f * ImageGridRed[x][y]);
-                ImageGrid[x][y] = (0.299f * ((pixel >> 16) & 0xff) +  0.587f * ((pixel >> 8) & 0xff) + 0.114f * ((pixel) & 0xff)  );
+                pixel = pixels[y * width + x];
+                b = (pixel >> 16) & 0xFF;
+                g = (pixel >> 8) & 0xFF;
+                r = (pixel) & 0xFF;
+                ImageGridRed[x][y] = r;
+                ImageGridGreen[x][y] = g;
+                ImageGridBlue[x][y] = b;
 
+                ImageGrid[x][y] = (0.114 * b + 0.587 * g + 0.299 * r);
             }
         }
 
@@ -188,15 +191,13 @@ public class CEDD implements GlobalFeature {
         int TempSum = 0;
         double Max = 0;
 
-        int TemoMAX_X = Step_X * (int)Math.floor(image.getWidth() >> 1);
-        int TemoMAX_Y = Step_Y * (int)Math.floor(image.getHeight() >> 1);
+        int TemoMAX_X = Step_X * (int) Math.floor(image.getWidth() >> 1);
+        int TemoMAX_Y = Step_Y * (int) Math.floor(image.getHeight() >> 1);
 
-        if (NumberOfBlocks > 0)
-        {
-            TemoMAX_X = Step_X * (int)Math.sqrt(NumberOfBlocks);
-            TemoMAX_Y = Step_Y * (int)Math.sqrt(NumberOfBlocks);
+        if (NumberOfBlocks > 0) {
+            TemoMAX_X = Step_X * (int) Math.sqrt(NumberOfBlocks);
+            TemoMAX_Y = Step_Y * (int) Math.sqrt(NumberOfBlocks);
         }
-
 
 
 //to here
@@ -241,21 +242,23 @@ public class CEDD implements GlobalFeature {
                         TempSum++;
 
                         if (j < (x + Step_X / 2) && i < (y + Step_Y / 2)) PixelsNeighborhood.Area1 += (ImageGrid[j][i]);
-                        if (j >= (x + Step_X / 2) && i < (y + Step_Y / 2)) PixelsNeighborhood.Area2 += (ImageGrid[j][i]);
-                        if (j < (x + Step_X / 2) && i >= (y + Step_Y / 2)) PixelsNeighborhood.Area3 += (ImageGrid[j][i]);
-                        if (j >= (x + Step_X / 2) && i >= (y + Step_Y / 2)) PixelsNeighborhood.Area4 += (ImageGrid[j][i]);
+                        if (j >= (x + Step_X / 2) && i < (y + Step_Y / 2))
+                            PixelsNeighborhood.Area2 += (ImageGrid[j][i]);
+                        if (j < (x + Step_X / 2) && i >= (y + Step_Y / 2))
+                            PixelsNeighborhood.Area3 += (ImageGrid[j][i]);
+                        if (j >= (x + Step_X / 2) && i >= (y + Step_Y / 2))
+                            PixelsNeighborhood.Area4 += (ImageGrid[j][i]);
 
                     }
                 }
 
-                PixelsNeighborhood.Area1 = (int)(PixelsNeighborhood.Area1 * (4.0 / (Step_X * Step_Y)));
+                PixelsNeighborhood.Area1 = (int) (PixelsNeighborhood.Area1 * (4.0 / (Step_X * Step_Y)));
 
-                PixelsNeighborhood.Area2 = (int)(PixelsNeighborhood.Area2 * (4.0 / (Step_X * Step_Y)));
+                PixelsNeighborhood.Area2 = (int) (PixelsNeighborhood.Area2 * (4.0 / (Step_X * Step_Y)));
 
-                PixelsNeighborhood.Area3 = (int)(PixelsNeighborhood.Area3 * (4.0 / (Step_X * Step_Y)));
+                PixelsNeighborhood.Area3 = (int) (PixelsNeighborhood.Area3 * (4.0 / (Step_X * Step_Y)));
 
-                PixelsNeighborhood.Area4 = (int)(PixelsNeighborhood.Area4 * (4.0 / (Step_X * Step_Y)));
-
+                PixelsNeighborhood.Area4 = (int) (PixelsNeighborhood.Area4 * (4.0 / (Step_X * Step_Y)));
 
 
                 MaskValues.Mask1 = Math.abs(PixelsNeighborhood.Area1 * 2 + PixelsNeighborhood.Area2 * -2 + PixelsNeighborhood.Area3 * -2 + PixelsNeighborhood.Area4 * 2);
@@ -465,7 +468,7 @@ public class CEDD implements GlobalFeature {
                 if (histogram[i] != 0) position = -1;
             }
         }
-        if (position<0) position = 143;
+        if (position < 0) position = 143;
         // find out the actual length. two values in one byte, so we have to round up.
         int length = (position + 1) / 2;
         if ((position + 1) % 2 == 1) length = position / 2 + 1;
@@ -513,5 +516,15 @@ public class CEDD implements GlobalFeature {
     @Override
     public String getFieldName() {
         return DocumentBuilder.FIELD_NAME_CEDD;
+    }
+
+    @Override
+    public String toString() {
+        StringBuilder sb = new StringBuilder(histogram.length * 2 + 25);
+        for (byte aData : histogram) {
+            sb.append((int) aData);
+            sb.append(' ');
+        }
+        return "CEDD{" + sb.toString().trim() + "}";
     }
 }
